--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
     <footer id="footer" class="footer">
         <p>Copyright © 2019 HackerYou</p>
     </footer>
-
+    <script src="../script.js"></script>
 </body>
 
 </html>
