added double carousel on desktop

--- a/index.html
+++ b/index.html
@@ -149,21 +149,30 @@
     <section id="album" class="album">
       <div class="wrapper carousel">
         <div class="carouselPic carouselVisible">
-          <img src="funplaceAssets/gallery-image-1.jpg" alt="playground">
-
+          <img src="funplaceAssets/gallery-image-1.jpg" alt="eating healthy">
         </div>
         <div class="carouselPic">
-          <img src="funplaceAssets/gallery-image-2.jpg" alt="girl sliding">
-
+          <img src="funplaceAssets/gallery-image-2.jpg" alt="building with playdoh">
         </div>
         <div class="carouselPic">
           <img src="funplaceAssets/gallery-image-3.jpg" alt="kids playing tug o' war">
-
+        </div>
+        <div class="carouselPic">
+          <img src="funplaceAssets/gallery-image-4.jpg" alt="bouncy castle">
+        </div>
+        <div class="carouselPic">
+          <img src="funplaceAssets/gallery-image-5.jpg" alt="playground">
+        </div>
+        <div class="carouselPic">
+          <img src="funplaceAssets/gallery-image-6.jpg" alt="handpainting">
+        </div>
+        <div class="carouselPic">
+          <img src="funplaceAssets/gallery-image-7.jpg" alt="girl sliding">
         </div>
 
         <div class="carouselButtons">
           <button id="carouselPrev" aria-label="Previous Slide"><</button>
-              <button id="carouselNext" aria-label="Next Slide">></button>
+          <button id="carouselNext" aria-label="Next Slide">></button>
         </div>
       </div>
     </section>
